# lab8

./: CMakeLists.txt  Dockerfile
.github/workflows/: ci-docker-build.yml
formatter_lib/: CMakeLists.txt
solver/: CMakeLists.txt  CMakeLists.txt.save.1
